--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -19,4 +19,4 @@ jobs:
     - name: Build with Maven
       run: mvn clean compile
     - name: Run Tests
-      run: mvn test 
+      run: mvn surefire:test
