--- a/.github/workflows/maven-publish.yml
+++ b/.github/workflows/maven-publish.yml
@@ -19,13 +19,11 @@ jobs:
         with:
           java-version: '8'
           distribution: 'adopt'
-          server-id: github
-          settings-path: ${{ github.workspace }}
 
       - name: Build with Maven
         run: mvn -B package --file pom.xml
 
       - name: Publish to GitHub Packages Apache Maven
-        run: mvn deploy -s $GITHUB_WORKSPACE/settings.xml
+        run: mvn --batch-mode deploy
         env:
           GITHUB_TOKEN: ${{ github.token }}
